<resources>
    <string name="app_name" translatable="false">Zuri Chat: Channels And DMs</string>
    <string name="enter_registered_email">Enter registered zuri chat email</string>
    <string name="verify_email">Verify Email</string>
    <string name="email_verified">Email Verified</string>
    <string name="continue_to_zuri_chat">Continue to Zuri Chat</string>
    <string name="proceed_to_chat_button">Proceed to Chat</string>
    <string name="imagelogo">imageLogo</string>
    <string name="description">Description</string>
    <string name="title_text">Title Text</string>
    <string name="next">Next</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="verification_code">A verification code has been sent to   <b> nwevopeacechinedu@gmail.com,</b> please enter the code   to verify your account.</string>
    <string name="hello_blank_fragment">No Internet Connection!</string>
    <string name="skip">Skip</string>
    <string name="slider_image">Slider Image</string>
    <string name="never_miss_a_chat">Never miss a chat</string>
    <string name="sub_heading_1">No more apologies for missing chats, take your chat with you</string>
    <string name="powered_by_zuri_chat">Powered by Zuri Chat</string>
    <string name="zuri_logo">Zuri Logo</string>
    <string name="swift_response_to_dms">Swift response to DMs</string>
    <string name="receive_notifications_on_chats_and_responds_swiftly">Receive notifications on chats and responds swiftly</string>
    <string name="customize_your_chat_experience">Customize your chat experience</string>
    <string name="customize_your_chat_environment_to_suit_your_preference">Customize your chat environment to suit your preference</string>
    <string name="title_activity_settings">Settings</string>
    <string name="welcome_title">Welcome to Zuri Chat</string>
    <string name="welcome_text">Send DMs to your contacts and channels with   ease, start conversations with just a click</string>
    <string name="register_mail">Email Address</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="send_to">Send to %1$s</string>
    <string name="x_selected">%1$d selected</string>
    <string name="all_view">All %1$s</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="manage_storage">Manage Storage</string>
    <string name="network_usage">Network usage</string>
    <string name="type_a_message">Type a message</string>
    <string name="search">Search</string>
    <string name="new_channel">New Channel</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="settings">Settings</string>
    <string name="zuri">Zuri Chat</string>
    <string name="profile_image">Profile image</string>
    <string name="display_header">Display</string>
    <string name="theme">Theme</string>
    <string name="theme_dialog">Choose your Theme</string>
    <string name="Wallpaper">Wallpaper</string>
    <string name="enter_send">Enter is send</string>
    <string name="system_default">System Default</string>
    <string name="chat_settings_header">Chat Settings</string>
    <string name="enter_to_send_main">Enter is send</string>
    <string name="enter_to_send_subtitle">Enter key will send your message</string>
    <string name="media_visibility_header">Media visibility</string>
    <string name="media_visibility_subtitle">Show newly downloaded media in your phone’s gallery</string>
    <string name="font_size_header">Font size</string>
    <string name="font_dialog">Choose Font Size</string>
    <string name="font_size_default">Medium</string>
    <string name="chat_backup">Chat backup</string>
    <string name="chat_history">Chat history</string>
    <string name="string_manage_storage">Manage Storage</string>
    <string name="profile_activity">Profile</string>
    <string name="delete_txt">delete</string>
    <string name="save_txt">save</string>
    <string name="larger_items_or_no_items_string">No Item here</string>
    <string name="wallpaper_dimming_header">Wallpaper Dimming</string>
    <string name="change_wallpaper">Change</string>
    <string name="bright_cat">Bright</string>
    <string name="dark_cat">Dark</string>
    <string name="solid_cat">Solid Colors</string>
    <string name="my_photos_cat">My Photos</string>
    <string name="default_wallpaper">Default Wallpaper</string>
    <string name="who_can_see_header">Who can see my personal info</string>
    <string name="who_can_see_summary">If you don’t share your Last seen,          you won’t be able to see other people’s Last seen</string>
    <string name="last_seen_header">Last seen</string>
    <string name="profile_photo_header">Profile photo</string>
    <string name="about_header">About</string>
    <string name="status_header">Status</string>
    <string name="read_receipt_header">Read receipt</string>
    <string name="read_receipt_summary">If turned off, you won’t send or receive Read receipts.         Read receipts are always sent for channels</string>
    <string name="channels_header">Channels</string>
    <string name="live_locations_header">Live location</string>
    <string name="blocked_contacts_header">Blocked contacts</string>
    <string name="fingerprint_lock_header">Fingerprint lock</string>
    <string name="prefsThemesList_default">none</string>
    <string name="username_">Username</string>
    <string name="hey_what_s_good_">Hey what\'s good</string>
    <string name="_10_07">10:07</string>
    <string name="profile_about">About</string>
    <string name="no_item_here_txt">Sorry, you do not have any  item here.</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="document">Document</string>
    <string name="make_your_channel_private">Make your channel private</string>
    <string name="set_your_channel_privacy">Set your channel privacy</string>
    <string name="channel_members">Channel members</string>
    <string name="make_your_channel_public">Make your channel public</string>
    <string name="et_channel_name">Name</string>
    <string name="todo">TODO</string>
    <string name="_22">22</string>
    <string name="channels">CHANNELS</string>
    <string name="Channel_info">Channel Info</string>
    <string name="tab_title_media">MEDIA</string>
    <string name="tab_title_docs">DOCS</string>
    <string name="tab_title_links">LINKS</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="chanel_search">Search</string>
    <string name="channel_media">Channel media</string>
    <string name="select_contact">Select Contact</string>
    <string name="members">Member(s)</string>
    <string name="changephoneno_hint_txt">Enter your new phone number</string>
    <string name="search_for_channels">Search for channels</string>
    <string name="channel_tones_header">Channel tones</string>
    <string name="channel_tones_summary">Play sound for incoming and outgoing message in channels</string>
    <string name="messages_cat_header">Messages</string>
    <string name="message_tones_header">Message tones</string>
    <string name="message_tones_summary">Play sound on new messages</string>
    <string name="vibrate_header">Vibrate</string>
    <string name="vibrate_summary">Vibrate on new messages</string>
    <string name="high_priority_header">High priority Notification</string>
    <string name="high_priority_summary">Display Preview of notification at the top of the screen</string>
    <string name="dm_notification_channel_name">DM Notification</string>
    <string name="unread_messages">Unread messages</string>
    <string name="channels_">Channels</string>
    <string name="online">online</string>
    <string name="android_devs">Android Devs</string>
    <string name="channel_group_members">Lux, Hamid, Joe, +234707…</string>
    <string name="search_hint">Search</string>
    <string name="item_action_phone">Item_action_phone</string>
    <string name="hi_there_this_is_the_beginning_of_n_the_conversation_in_this_channel">Hi there, this is the beginning of \n the conversation in this channel</string>
    <string name="john_felix_doe">John Felix Doe</string>
    <string name="last_seen_">last seen at 5:50am</string>
    <string name="welcome_desc">Send DMs to your contacts and channels with\n ease, start conversations with just a click</string>
    <string name="register_string">Register</string>
    <string name="sign_in_txt">Sign in to your Zuri account</string>
    <string name="welcome_zc_txt">Welcome to Zuri Chat</string>
    <string name="welcome_rect">welcome top rectangle</string>
    <string name="confirm_pass_hdr">Confirm Password</string>
    <string name="confirm_pass">Confirm password to sign in with account</string>
    <string name="forgot_pass_sub_1">Please press continue to reset the password for the account</string>
    <string name="switch_acc">Switch Account</string>
    <string name="logout">Log out</string>
    <string name="logout_dialog">Do you want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="final_logout">Logging out…</string>
    <string name="switch_accounts_toolbar_header">Previously Used Accounts</string>
    <string name="no_account_to_switch_text">Sign in with more than one account on this device to use this feature</string>
    <string name="please_ente">
        Please enter the email used in registering this account</string>
    <string name="email_addre">Email Address</string>
    <string name="back_to_sig">Back to Sign In </string>
    <string name="didn_t_rece">Didn\u00E2\u0080\u0099t receive any code?</string>
    <string name="label">Sign in to your Zuri account</string>
    <string name="forgotten_password">Forgot Password</string>
    <string name="new_password">Your new password must be different from previously used password</string>
    <string name="new_pass">New Password</string>
    <string name="channels_who_add">Who can Add me to channels</string>
    <string name="everyone">Everyone</string>
    <string name="my_contacts">My Contacts</string>
    <string name="my_contacts_except">My Contacts Except</string>
    <string name="nobody">Nobody</string>
    <string name="live_location_manage__device_settings">Live location requires background location. You can manage this in your device settings.</string>
    <string name="immediately">Immediately</string>
    <string name="one_minute">After 1 minute</string>
    <string name="contacts_who_can_t_add_you">Contacts who can’t add you to a channel will have the option of inviting you privately instead.</string>
    <string name="mute_channel_notifications_for">Mute notifications for…</string>
    <string name="mute_for_8_hours">8 hours</string>
    <string name="mute_for_1_week">1 week</string>
    <string name="mute_for_always">Always</string>
    <string name="show_notifi">Show notifications</string>
    <string name="cancel_mute_channel_settings">Cancel</string>
    <string name="ok_mute_channel">OK</string>
    <string name="james_is_so_great">James is so great</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="_12">12</string>
</resources>