<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:layout_height="match_parent"
        app:iconSpaceReserved="false"
        app:title="@string/display_header">

        <ListPreference
            app:defaultValue="sys_default"
            app:dialogTitle="@string/theme_dialog"
            app:entries="@array/themes"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/theme_icon"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:allowDividerBelow="true"
            app:icon="@drawable/wallpaper_icon"
            app:title="@string/Wallpaper" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/chat_settings_header"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:key="enter_to_send"
            app:title="@string/enter_to_send_main"
            app:summary="@string/media_visibility_subtitle"/>

        <SwitchPreferenceCompat
            app:key="media_visible"
            app:summary="@string/media_visibility_subtitle"
            app:title="@string/media_visibility_header" />
        <ListPreference
            app:title="@string/font_size_header"
            app:entryValues="@array/font_values"
            app:key="font_size"
            app:dialogTitle="@string/font_dialog"
            app:entries="@array/fonts"
            app:defaultValue="2"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <Preference
        app:title="@string/chat_backup"
        app:icon="@drawable/backup_icon_"/>
    <Preference
        app:title="@string/chat_history"
        app:icon="@drawable/chat_history_icon"/>





</PreferenceScreen>