<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_phone"
        android:icon="@drawable/ic_add_call"
        android:orderInCategory="100"
        android:title="@string/item_action_phone"
        android:visible="true"
        app:showAsAction="always" />
    <item android:id="@+id/channel_info"
        android:title="@string/Channel_info"
        android:visible="true"
        />
    <item android:id="@+id/channel_media"
        android:title="@string/channel_media"
        android:visible="true"
        />
    <item android:id="@+id/channel_search"
        android:title="@string/chanel_search"
        android:visible="true"
        />
    <item android:id="@+id/mute_notifications"
        android:title="@string/mute_notifications"
        android:visible="true"
        />
</menu>