<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/search"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:visible="true"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/new_channel"
        android:title="@string/new_channel"
        android:orderInCategory="101"
        android:visible="true"/>
    <item android:id="@+id/saved_messages"
        android:title="@string/saved_messages"
        android:orderInCategory="102"
        android:visible="true"/>
    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="103"
        android:visible="true"/>

</menu>