<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/muteChannelNotificationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/mute_channel_notifications_for"
        android:textAppearance="@style/mute_channel_notifications_for"/>

    <RadioGroup
        android:id="@+id/muteChannelNotificationsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/muteChannelNotificationTextView"
        android:layout_marginStart="17.25dp"
        android:layout_marginTop="25.25dp">

        <RadioButton
            android:id="@+id/muteChannelFor8Hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mute_for_8_hours"
            android:textAppearance="@style/mute_for_8_hours"/>

        <RadioButton
            android:id="@+id/muteChannelFor1Week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mute_for_1_week"
            android:textAppearance="@style/mute_for_8_hours"/>

        <RadioButton
            android:id="@+id/muteChannelAlways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mute_for_always"
            android:textAppearance="@style/mute_for_8_hours"/>

    </RadioGroup>


    <View
        android:id="@+id/line_24"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/muteChannelNotificationsRadioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/line_24"
        />

    <TextView
        android:id="@+id/show_notifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        app:layout_constraintTop_toBottomOf="@id/line_24"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/show_notifi"
        android:textAppearance="@style/show_notifi"
        />

    <TextView
        android:id="@+id/muteChannelCancelOption"
        android:layout_width="50dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toRightOf="@id/show_notifi"
        app:layout_constraintTop_toBottomOf="@id/show_notifi"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:layout_centerVertical="true"
        android:text="@string/cancel_mute_channel_settings"
        android:textAppearance="@style/cancel_mute_channel_settings"
        />

    <TextView
        android:id="@+id/muteChannelOkOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/muteChannelCancelOption"
        app:layout_constraintBottom_toBottomOf="@id/muteChannelCancelOption"
        app:layout_constraintLeft_toRightOf="@id/muteChannelCancelOption"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ok_mute_channel"
        android:textAppearance="@style/cancel_mute_channel_settings"
        android:lineSpacingExtra="10sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>