<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/edit_your_name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:elegantTextHeight="false"
        android:fontFamily="@font/lato"
        android:maxLength="30"
        android:minHeight="48dp"
        android:paddingEnd="26dp"
        android:singleLine="true"
        android:text="@string/james_is_so_great"
        android:textColor="#4C4040"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11" />

    <Button
        android:id="@+id/saveBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/save"
        android:textColor="@color/primary_light_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Button
        android:id="@+id/cancelBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/cancel"
        android:textColor="@color/primary_light_color"
        app:layout_constraintBottom_toBottomOf="@+id/saveBtn"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn"
        app:layout_constraintTop_toTopOf="@+id/saveBtn" />

    <TextView
        android:id="@+id/name_text_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/lato"
        android:text="@string/_12"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="@+id/editName" />


</androidx.constraintlayout.widget.ConstraintLayout>